--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,15 @@
 version: "3"
 services:
-  ibench:
+  ibench:   
     image: 192.168.1.42:5001/ibench
     deploy:
-      replicas: 6
+      replicas: 1
       resources:
         limits:
             cpus: "1"
-            memory: 128M
+            memory: 512M
       placement:
-        constraints:
-          - node.hostname != worker1    
-          - node.hostname != worker6
-          - node.hostname != worker20
-          - node.hostname != manager
-      restart_policy:
-        condition: on-failure
+        constraints: [node.hostname==worker3]
     ports: 
       - "9001:9000"
     environment:
@@ -24,7 +18,7 @@ services:
       - NODE_SERVER_PORT=9001
       - SERVER_IP=0.0.0.0
       - PRIME=10971096049
-  
+
 networks:
   webnet:
     
